--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "@auth0/angular-jwt": "^3.0.1",
+    "angular-img-http-src": "^1.0.1",
     "angular-popper": "^2.0.1",
     "bootstrap": "^4.4.1",
     "guid-typescript": "^1.0.9",
