--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "@auth0/angular-jwt": "^3.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.2",
     "angular-img-http-src": "^1.0.1",
     "angular-popper": "^2.0.1",
     "bootstrap": "^4.4.1",
@@ -28,6 +29,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-spinner": "^9.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
